@@ -1,5 +1,6 @@
 2008-09-05  Alper KANAT  <alperkanat@gmail.com>
 
+	* blog/feeds.py: trying to change the locale to make it valid for RFC..
 	* session_messages: added..
 	* settings-example.py, extra/messages.py, users/views.py: bundled
 	session_messages app into raptiye.. this saves a lot of time for me on the
